--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1181,6 +1181,7 @@ color: #ccc;
 /***** Portfolio *****/
 
 .portfolio-container {
+    border-top: 1px solid #ccc;
     margin: 0 auto;
     padding-bottom: 60px;
     background: #f4f4f4;
