--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,40 @@
   padding: 0;
 }
 
+/* Methodology */
+#methodology h3 {
+    font-size: 32px;
+    font-weight: 300;
+    color: #555;
+    line-height: 36px;
+}
+
+.methodology-box {
+  padding: 21px;
+  text-align: left;
+  min-height: 160px;
+  margin-bottom: 21px;
+
+  box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.15);
+  -moz-box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.15);
+  -webkit-box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.15);
+}
+
+.methodology-box .header {
+  border-bottom: 1px solid #c6007c;
+  padding-bottom: 10px;
+}
+
+.methodology-container > h3 {
+  margin-bottom: 30px;
+}
+
+.img-shadow {
+  box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.15);
+  -moz-box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.15);
+  -webkit-box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.15);
+}
+
 /***** General *****/
 
 body {
