--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,11 @@
   -webkit-box-shadow: 1px 1px 10px 0px rgba(0,0,0,0.15);
 }
 
+.iubenda-ibadge {
+  position: relative;
+  top: 7px;
+}
+
 /***** General *****/
 
 body {
