--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,10 @@ input[type="email"]::-webkit-input-placeholder, textarea::-webkit-input-placehol
 color: #ccc;
 }
 
+.btn-contact.btn-signup {
+  padding: 0 30px;
+}
+
 .btn-subscribe,
 .btn-contact {
     margin: 0;
@@ -319,11 +323,11 @@ color: #ccc;
 .btn-subscribe:hover,
 .btn-contact:hover {
   background: #c6007c;
-  border: 1px solid #0092a0;
+  border: 1px solid #9E0059;
   color: #fff !important;
-  -webkit-box-shadow: inset 0 1px 0 #00a6b1;
-  -moz-box-shadow: inset 0 1px 0 #00a6b1;
-  box-shadow: inset 0 1px 0 #00a6b1;
+  -webkit-box-shadow: inset 0 1px 0 #9E0059;
+  -moz-box-shadow: inset 0 1px 0 #9E0059;
+  box-shadow: inset 0 1px 0 #9E0059;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     -o-transition: all .3s;
     -moz-transition: all .3s;
@@ -336,11 +340,11 @@ color: #ccc;
 .btn-contact:active {
   outline: 0;
   background: #c6007c;
-  border: 1px solid #0092a0;
+  border: 1px solid #b70072;
   color: #fff !important;
-  -webkit-box-shadow: inset 0 1px 0 #00a6b1;
-  -moz-box-shadow: inset 0 1px 0 #00a6b1;
-  box-shadow: inset 0 1px 0 #00a6b1;
+  -webkit-box-shadow: inset 0 1px 0 #b70072;
+  -moz-box-shadow: inset 0 1px 0 #b70072;
+  box-shadow: inset 0 1px 0 #b70072;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -1458,11 +1462,11 @@ color: #ccc;
 .cbp-l-project-details-visit:hover {
   /* @editable properties */
   background: #c6007c;
-  border: 1px solid #0092a0;
+  border: 1px solid #b70072;
   color: #fff !important;
-  -webkit-box-shadow: inset 0 1px 0 #00a6b1;
-  -moz-box-shadow: inset 0 1px 0 #00a6b1;
-  box-shadow: inset 0 1px 0 #00a6b1;
+  -webkit-box-shadow: inset 0 1px 0 #b70072;
+  -moz-box-shadow: inset 0 1px 0 #b70072;
+  box-shadow: inset 0 1px 0 #b70072;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     -o-transition: all .3s;
     -moz-transition: all .3s;
